# nexus

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh
llm-integration-platform/: .env.example  .gitignore  README.md  ecosystem.config.js  jest.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
llm-integration-platform/__tests__/: api-chat-models.test.ts  api-chat-route.test.ts  api-deploy-validate.test.ts  constants.test.ts  model-scoring.test.ts  utils.test.ts  vision-validation.test.ts
llm-integration-platform/public/: NEXUS-SYSTEM.md
llm-integration-platform/scripts/: download_model.py  finetune_unsloth.py  infer_awq.py  infer_bitnet.py  infer_finetune.py  infer_fp16.py  infer_gguf.py  infer_gptq.py  infer_mlx.py  infer_vlm.py  quantize_awq.py  quantize_bitnet.py  quantize_gguf.py  quantize_gptq.py  quantize_mlx.py  setup_all_venvs.sh  setup_venvs.sh  vision_dataset_prepare.py  vision_export.py  vision_infer.py  vision_train.py
llm-integration-platform/src/: middleware.ts
nexus-android-v4/: gradlew  settings.gradle.kts
nexus-android-v4/app/: build.gradle.kts
nexus-android-v7/: .gitignore  README.md  settings.gradle.kts
nexus-android-v7/app/: build.gradle.kts
nexus-android-v7/app/src/main/cpp/: CMakeLists.txt  llama.cpp  nexus_jni.cpp
nexus-desktop/: package-lock.json  package.json
nexus-desktop-v2/: README.md  package-lock.json  package.json
nexus-ios/: Package.swift  README.md  project.yml
nexus_mobile/: README.md  pubspec.yaml
(+288 files in other folders)
